removed background img. Changed blog posts to use the post layout. Modified blog post header tag.

--- a/_posts/2013-09-09-OOP.md
+++ b/_posts/2013-09-09-OOP.md
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: post
 comments: true
 title: "Object Oriented Programming in Ruby"
 ---
@@ -45,4 +45,4 @@ title: "Object Oriented Programming in Ruby"
 
 <p>And now John's year of birth has changed and he's a happy man.</p>
 
-<p><img src="../imgs/john.jpeg" alt="Johnny Major"></p>
+![John Major]({{ site.url }}/imgs/john.jpeg)
