minor content change

--- a/_posts/2013-09-09-OOP.md
+++ b/_posts/2013-09-09-OOP.md
@@ -4,7 +4,7 @@ comments: true
 tags: OOP Ruby
 title: "Object Oriented Programming in Ruby"
 ---
-<p>Let's dive straight into ruby classes. We're going to build a class that will help keep a record of British prime ministers. Each prime minister has various data associated with them, to keep it simple we're going to add just three to begin with. These will form the attributes of our class:
+<p>This is a quick intro to OOP in ruby. We're going to build a class that will help keep a record of British prime ministers. Each prime minister has various data associated with them, to keep it simple we're going to add just three to begin with. These will form the attributes of our class:
   <ul>
     <li>first name</li>
     <li>last name</li>
